<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/per_app_gps_setting">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gps_switch"
            android:layout_alignParentRight="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_toLeftOf="@+id/gps_switch"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gps_topic"
                android:textStyle="bold"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="289dp"
                android:layout_height="wrap_content"
                android:text="@string/gps_tips"
                android:layout_marginTop="5dip"/>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/gps_tweaks">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_latitude" >
        </TextView>

        <EditText
            android:id="@+id/lat_editText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="3"
            android:imeOptions="actionDone|flagNavigateNext"
            android:inputType="numberDecimal" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_longitude" >
        </TextView>

        <EditText
            android:id="@+id/log_editText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="3"
            android:imeOptions="actionDone|flagNavigateNext"
            android:inputType="numberDecimal" >
        </EditText>

        <Button
            android:id="@+id/MAP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_map" />

    </LinearLayout>




</LinearLayout>
